--- a/app/src/main/res/layout/activity_weqther.xml
+++ b/app/src/main/res/layout/activity_weqther.xml
@@ -11,30 +11,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
-    <ScrollView
-        android:id="@+id/weather_layout"
+
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never">
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="match_parent">
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            android:layout_height="match_parent">
 
-            <include layout="@layout/title"/>
 
-            <include layout="@layout/now"/>
 
-            <include layout="@layout/forecast"/>
+            <ScrollView
+                android:id="@+id/weather_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:overScrollMode="never">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true">
 
-            <include layout="@layout/api"/>
+                    <include layout="@layout/title"/>
 
-            <include layout="@layout/suggestion"/>
-        </LinearLayout>
+                    <include layout="@layout/now"/>
 
-    </ScrollView>
+                    <include layout="@layout/forecast"/>
+
+                    <include layout="@layout/api"/>
+
+                    <include layout="@layout/suggestion"/>
+                </LinearLayout>
+
+            </ScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <fragment
+            android:name="com.coomweather.android.ChooseAreaFragment"
+            android:id="@+id/choose_area_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"/>
+    </android.support.v4.widget.DrawerLayout>
+
 
 
 </FrameLayout>
